--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,1 +1,120 @@
+* {
+  font-family: Helvetica;
+  box-sizing: border-box;
+}
 
+h1 {
+  margin: 30px;
+  font-size: 1.75em;
+  text-align: center;
+}
+
+p {
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 40px;
+  color: black;
+  clear: right;
+  text-align: justify;
+}
+
+.my-section {
+    border: 1px solid black;
+    background-color: lightgrey;
+}
+
+.title-section {
+	float: right;
+	width: 200px;
+	border: 1px solid black;
+	font-size: 1.25em;
+	text-align: center;
+	font-weight: bold;
+}
+
+.title-chiken {
+	background-color: pink;
+}
+
+.title-beef {
+	color: white;
+	background-color: red;
+}
+
+.title-sushi {
+	background-color: yellow;
+}
+
+/* Simple Responsive Framework. */
+.row {
+	width: 100%;
+	margin-left: 10px;
+}
+
+/********** Medium devices only **********/
+@media (min-width: 992px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4 {
+  	float: left;
+  	padding-right: 20px;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+}
+
+/********** Small devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-6, .col-sm-12 {
+    float: left;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+}
+
+/********** XS devices only **********/
+@media (max-width: 767px) {
+  .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-12 {
+    float: left;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+  .col-xs-1 {
+    width: 8.33%;
+  }
+  .col-xs-2 {
+    width: 16.66%;
+  }
+  .col-xs-3 {
+    width: 25%;
+  }
+  .col-xs-12 {
+    width: 100%;
+  }
+}
